test/JDBC/sql_expected/8144_1.out

-- simple batch start
create procedure p8144 @a int as
begin
select @a
end
GO

EXEC p8144 1, 2
GO
~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~


drop procedure p8144
GO

begin transaction
GO

create procedure p8144 @a int as
begin
select @a
end
GO


EXEC p8144 1, 2
GO
~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~



-- Below output is only applicable if query is special case. for example, CREATE/ALTER TRIGGER, CREATE/ALTER FUNCTION, CREATE/ALTER PROC, CREATE/ALTER VIEW etc
if (@@trancount > 0) select cast('compile time error' as text) else select cast('runtime error' as text)
GO
~~START~~
text
compile time error
~~END~~


if (@@trancount > 0) rollback tran
GO

drop procedure p8144
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'p8144', because it does not exist or you do not have permission.)~~



-- simple batch end
create schema error_mapping;
GO

-- Next portion is to check if error is being raised during parse analysis phase
create table error_mapping.temp1 (a int)
GO

create procedure p8144 @a int as
begin
select @a
end
GO

create procedure error_mapping.ErrorHandling1 as
begin
insert into error_mapping.temp1 values(1)
EXEC p8144 1, 2
end
GO

create table error_mapping.temp2 (a int)
GO

insert into error_mapping.temp2 values(1)
EXEC p8144 1, 2
GO
~~ROW COUNT: 1~~

~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~


-- Here we are assuming that error_mapping.ErrorHandling1 is created with no error
create table error_mapping.temp3 (a int)
GO

insert into error_mapping.temp3 values(1)
exec error_mapping.ErrorHandling1;
GO
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~


drop procedure p8144
GO

if ((select count(*) from error_mapping.temp1) = 0 and (select count(*) from error_mapping.temp2) = 0 and (select count(*) from error_mapping.temp3) > 0) select cast('parse analysis phase error' as text)
GO

drop procedure error_mapping.ErrorHandling1;
GO
drop table error_mapping.temp1;
drop table error_mapping.temp2;
drop table error_mapping.temp3;
GO



-- Parse analysis phase end
-- compile time error portion
-- Executing test error_mapping.ErrorHandling1
create procedure p8144 @a int as
begin
select @a
end
GO

create procedure error_mapping.ErrorHandling1 as
begin
EXEC p8144 1, 2
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('Compile time error' as text);
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO
drop procedure p8144
GO


create procedure p8144 @a int as
begin
select @a
end
GO

begin transaction
GO
-- Executing test error_mapping.ErrorHandling1
create procedure error_mapping.ErrorHandling1 as
begin
EXEC p8144 1, 2
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
end
GO

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'error_mapping.ErrorHandling1', because it does not exist or you do not have permission.)~~

drop procedure p8144
GO


-- Checking xact_abort_flag for compile time error --
set xact_abort ON;
GO
create procedure p8144 @a int as
begin
select @a
end
GO

begin transaction
GO
-- Executing test error_mapping.ErrorHandling1
create procedure error_mapping.ErrorHandling1 as
begin
EXEC p8144 1, 2
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
end
GO

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'error_mapping.ErrorHandling1', because it does not exist or you do not have permission.)~~

drop procedure p8144
GO

set xact_abort OFF;
GO


-- comiple time error portion end --
-- Next portion is for runtime error --
-- Executing test error_mapping.ErrorHandling10000000
create procedure p8144 @a int as
begin
select @a
end
GO

create procedure error_mapping.ErrorHandling1 as
begin
EXEC p8144 1, 2
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
GO
create procedure error_mapping.ErrorHandling2 as
begin
exec error_mapping.ErrorHandling1;
if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
end
GO

begin transaction;
GO
exec error_mapping.ErrorHandling2;
GO
~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~

~~START~~
text
STATEMENT TERMINATING ERROR
~~END~~

~~START~~
int
1
~~END~~

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
drop procedure error_mapping.ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO
drop procedure p8144
GO

set xact_abort ON;
GO
-- Executing test error_mapping.ErrorHandling10000000
create procedure p8144 @a int as
begin
select @a
end
GO

create procedure error_mapping.ErrorHandling1 as
begin
EXEC p8144 1, 2
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
GO
create procedure error_mapping.ErrorHandling2 as
begin
exec error_mapping.ErrorHandling1;
if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
end
GO

begin transaction;
GO
exec error_mapping.ErrorHandling2;
GO
~~ERROR (Code: 8144)~~

~~ERROR (Message: Procedure or function p8144 has too many arguments specified.)~~

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
drop procedure error_mapping.ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~START~~
text
BATCH TERMINATING\ txn rolledback
~~END~~

drop procedure p8144
GO

set xact_abort OFF;
GO


-- Error classification is done --
-- Executing test error_mapping.ErrorHandling10000000
create procedure p8144 @a int as
begin
select @a
end
GO


begin try
select 1
EXEC p8144 1, 2
end try
begin catch
	select xact_state();
end catch
if @@trancount > 0 rollback transaction;
drop procedure error_mapping.ErrorHandling1;
drop procedure error_mapping.ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~START~~
int
1
~~END~~

~~START~~
smallint
0
~~END~~

~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'error_mapping.ErrorHandling1', because it does not exist or you do not have permission.)~~

~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'error_mapping.ErrorHandling2', because it does not exist or you do not have permission.)~~

drop procedure p8144
GO

drop schema error_mapping;
GO
